--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -6,6 +6,8 @@
     <title>Editar Perfil</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='edit_profile.css') }}">
     <link rel="stylesheet" href="../static/mediaSmartphone.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/imask/6.0.7/imask.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -29,10 +31,13 @@
             <input type="text" id="endereco" name="endereco" class="form-field" required value="{{ usuario.endereco }}">
 
             <label for="telefone">Telefone:</label>
-            <input type="text" id="telefone" name="telefone" class="form-field" value="{{ usuario.telefone }}">
+            <input type="telefone" id="telefone" name="telefone" class="form-field" required>
 
             <label for="senha">Senha:</label>
             <input type="password" id="senha" name="senha" class="form-field" required>
+
+            <label for="confirma_senha">Confirmar Senha:</label>
+            <input type="password" id="confirma_senha" name="confirma_senha" class="form-field" required>
 
             <button type="submit" class="register-button">Salvar Alterações</button>
 
@@ -48,6 +53,25 @@
                     successMessage.style.display = 'none';
                 }
             }, 5000); // 5000 milissegundos (5 segundos)
+
+            document.addEventListener("DOMContentLoaded", function() {
+                var telefoneInput = document.getElementById("telefone");
+
+                var telefoneMask = IMask(telefoneInput, {
+                    mask: '(00) 00000-0000'  // Defina a máscara como desejar
+                });
+            });
+
+            // Confirmação de senha
+            $('form').submit(function() {
+                    var senha = $('#senha').val();
+                    var confirmaSenha = $('#confirma_senha').val();
+
+                    if (senha !== confirmaSenha) {
+                        alert('As senhas não correspondem!');
+                        return false; // Impede o envio do formulário se as senhas não coincidirem
+                    }
+            });
         </script>
     </div>
 </body>
