--- a/templates/admin_list_product.html
+++ b/templates/admin_list_product.html
@@ -5,32 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='lista_cup_adm.css') }}">
-    <title>Edita cupcakes</title>
+    <title>Lista de Cupcakes</title>
 </head>
 <body>
     <div class="container">
-        <h1>Lista de Cupcakes disponíveis para editar.</h1>
-        <form method="POST" action="/atualizar_disponibilidade">
-            <ul class="cupcake-list">
-                {% for cupcake in cupcakes %}
-                    <li class="cupcake-item">
-                        <div class="cupcake-image-container">
-                            <img src="{{ cupcake[5] }}" alt="Imagem do Cupcake" class="cupcake-image">
-                        </div>
-                        <div class="cupcake-details">
-                            <strong class="cupcake-name">{{ cupcake[1] }}</strong>
-                            <p class="cupcake-description">{{ cupcake[2] }}</p>
-                            <p class="cupcake-price">Preço: R$ {{ cupcake[3] }}</p>
-                            <!-- Checkbox para editar a disponibilidade -->
-                            <label for="disponibilidade_{{ cupcake[0] }}">Disponível:</label>
-                            <input type="checkbox" id="disponibilidade_{{ cupcake[0] }}" name="cupcake_{{ cupcake[0] }}" {% if cupcake[4] %}checked{% endif %}>
-                            <button type="submit">Atualizar Disponibilidade</button>
-                        </div>
-                    </li>
-                {% endfor %}
-            </ul>
-
-        </form>
+        <h1>Lista de Cupcakes disponíveis para edição</h1>
+        <ul class="cupcake-list">
+            {% for cupcake in cupcakes %}
+                <li class="cupcake-item">
+                    <div class="cupcake-image-container">
+                        <img src="{{ cupcake[5] }}" alt="Imagem do Cupcake" class="cupcake-image">
+                    </div>
+                    <div class="cupcake-details">
+                        <p><strong>Nome:</strong> {{ cupcake[1] }}</p>
+                        <p><strong>Descrição:</strong> {{ cupcake[2] }}</p>
+                        <p><strong>Preço:</strong> R$ {{ cupcake[3] }}</p>
+                        <p><strong>Disponível:</strong> {% if cupcake[4] %}Sim{% else %}Não{% endif %}</p>
+                        <a href="/admin_edit_product/{{ cupcake[0] }}" class="edit-link">Editar</a>
+                    </div>
+                </li>
+            {% endfor %}
+        </ul>
     </div>
 </body>
 </html>
